tests/snapshots/protocols__serialize__tests__illegal_fork_prot.snap
---
source: src/serialize.rs
expression: content
---
error: Lexing failed: expected assign, step, fork, while_loop, assert_eq, or if
   ┌─ tests/illegal_fork.prot:12:3
   │
12 │   fork(1);
   │   ^ Lexing failed: expected assign, step, fork, while_loop, assert_eq, or if
